--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python = "<3.12,>=3.8.0"
 singer-sdk = { version=">=0.28,<0.39" }
 jq = "1.10.0"
 pandas = "2.3.2"
+numpy = "2.3.3"
 clickhouse-connect = "0.9.1"
 fs-s3fs = { version = "^1.1.1", optional = true }
 clickhouse-sqlalchemy = { git = "https://github.com/xzkostyan/clickhouse-sqlalchemy.git", rev = "7ad94b0" }
