--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,11 @@ keywords = [
 license = "Apache-2.0"
 packages = [
     { include = "target_clickhouse" },
+     { include = "core" }
 ]
 
 [tool.poetry.dependencies]
-python = "<3.12,>=3.8.0"
+python = ">=3.9,<3.12"
 singer-sdk = { version=">=0.28,<0.39" }
 jq = "1.10.0"
 pandas = "2.3.2"
