--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ keywords = [
 license = "Apache-2.0"
 packages = [
     { include = "target_clickhouse" },
-     { include = "core" }
+     { include = "cxs" }
 ]
 
 [tool.poetry.dependencies]
